--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -150,6 +150,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/core/jquery-ui-1.8.22.custom.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/core/jquery-ui-timepicker-addon.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/core/bootstrap.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/core/css3-mediaqueries.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/core/app.js"></script>
     <script type="text/javascript">
       var _gaq = _gaq || [];
